--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@
     font-family: 'Product Sans', sans-serif;
 }
 
+@media (max-width: 767px) {
+    #Start {
+      padding-top: 80px;
+      padding-bottom: 80px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    #Start {
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
+  }
+  
 
 .navbar {
     background-color: #d67b82 !important; /* Light pink */
@@ -27,6 +41,12 @@
     background-color: navy;
     color: white;
 }
+
+.col-md-6 img {
+    object-fit: cover;
+    height: 100%;
+  }
+  
 
 #Project{
     padding-top: 70px;
